--- a/programs/solana-nft-anchor/Cargo.toml
+++ b/programs/solana-nft-anchor/Cargo.toml
@@ -18,5 +18,10 @@ default = []
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = { version = "0.29.0", features = ["metadata"] }
+#mpl-token-metadata = "1.13.1"
 mpl-token-metadata = "4.0.0"
 ahash = "=0.8.6"
+
+[provider]
+cluster = "devnet"
+
